HelpSource/scdoc.css
/* ... */
div.contents {
    margin: 0;
    padding: calc(33px + .5em) 1em 1em;
}

table {
    border-collapse: collapse;
    font-size: 10pt;
    margin-top: 1em;
    margin-left: 2em;
}
table td {
    border: 1px solid #ddd;
    padding: 0.3em;
}

table table {
    margin: 0em;
}

p {
    margin-top: 1em;
    margin-bottom: 0.3em;
}

a:link, a:visited, a:link:hover {
    text-decoration: none;
    color: #449;
}

a:link:hover {
    text-decoration: underline;
}

#inheritedclassmets, #inheritedinstmets {
    margin-top: 1em;
}

.inheritedmets_class {
    font-weight: bold;
    color: #555;
    margin-top: 0.5em;
    margin-bottom: 0.25em;
}
.inheritedmets_class a {
    color: #333;
}
ul.inheritedmets {
    list-style: none;
    padding: 0;
    margin: 0;
    margin-left: 2em;
    margin-top: 0.25em;
}
ul.inheritedmets li {
    font-family: monospace;
}
a.inheritedmets_toggle {
    font-size: 9pt;
    color: #558;
    font-weight: normal;
/*    margin-left: 2em;*/
}

a.inheritedmets_toggle:hover {
    text-decoration: none;
    color: #000;
}

a.subclass_toggle {
    color: #555;
    font-weight: normal;
}

a.subclass_toggle:hover {
    text-decoration: none;
    color: #000;
}


#menubar {
    position: fixed;
    text-indent: 0;
    width: 100%;
    height: 33px;
    padding: 0.5em 0;
    background-color: #f9f9f9;
    box-shadow: 0em 0em 0.25em rgba(128, 128, 128, 0.5);
    z-index: 2;
}

#nav {
    padding: 0;
    margin: 0;
}

#menubar .menuitem {
    padding: 0;
    margin: 0;
    border-right: 1px solid #ddd;
    font-size: 10pt;
    display: inline-block;
}

#menubar .menuitem:first-child {
    /* It is better to make the logo a background image instead of an <img> because it is purely
    decorative. */
    background-image: url("images/SC_icon.png");
    background-repeat: no-repeat;
    background-position: 0.5em center;
    background-size: 1.5em;
}

a.menu-link {
    color: #666;
    padding: 0 0.75em 0 0.75em;
    /* This ensures that the logo isn't cut off. */
    min-height: 1.5em;
    /* This gets the text to vertically center. Discovered by accident. */
    line-height: 1.5em;
}
a.menu-link:hover {
    text-decoration: none;
    color: #999;
}

#menubar .menuitem:first-child a {
    /* The cube logo is actually *under* the <a>, but it shows through so that it looks like it
    is part of the link. */
    padding-left: 2em;
}

#menubar .menuitem:first-child a:hover {
    /* Lighten the background image by adding a translucent white layer over it. */
    background-color: rgba(255, 255, 255, 0.2);
}

#menubar .menuitem a.home span,
#menubar .toc-link span {
    display: none;
}

@media (max-width: 320px) {
    #toc-container {
        display: none;
    }
}

@media (min-width: 512px) {
    #menubar .menuitem:first-child a {
        padding-left: 2.5em;
    }

    #menubar .menuitem a.home span,
    #menubar .toc-link span {
        display: initial;
    }
}

#menubar .menuitem:last-child {
    border-right: none;
}

#topdoctitle {
/*    font-weight: bold;*/
    font-style: italic;
/*    color: #fff;*/
    color: #444;
    cursor: pointer;
}

.submenu, #toc {
    position: absolute;
    top: 33px;
    padding: 0.5em;
    display: none;
    background-color: #f9f9f9;
    border: thin solid #ddd;
}

.submenu a {
        position: relative;
        display: block;
        margin: 0;
/*      padding: 5px 10px;*/
        padding: 0.2em;
        width: auto;
        white-space: nowrap;
        text-align: left;
/*      text-decoration: none;*/
        color: #447;
        font-weight: bold;
}

.toc_search {
    margin-left: 10px;
    color: #999;
    font-size: 9pt;
}

.toc_search input {
    border: 1px solid #ddd;
}


.header {
  padding-bottom: 0.18em;
}

#label {
    color: #666;
    font-size: 0.9em;
}

#summary {
    font-weight: normal;
    font-size: 1.1em;
    font-style: italic;
    color: #444;
}
#related {
    font-weight: bold;
    margin-top: 0.5em;
}
#filename {
    word-break: break-all;
}
.headerimage {
    float: right;
    margin-right: 1ex;
}

#superclasses {
    font-size: 9pt;
    color: #444;
    font-weight: normal;
}

.extension-indicator-ctr {
    float: right;
    font-size: 12pt;
    padding: 0.4em 0.4em 0.2em 0.4em;
    background-color: #601c8b;
    color: white;
    border-radius: 3px;
    border-bottom: 2px solid #39174F;
}

.extension-indicator-icon {
    height: 1em;
    margin-right: 0.5em;
}

.extension-indicator-text {
    line-height: 1em;
}

.subheader {
    font-size: 9pt;
    color: #444;
    margin-top: 1em;
}

.jump {
    text-align: right;
    font-size: 9pt;
    color: #555;
}
.jump a {
    font-weight: bold;
    padding-top:0;
    margin-top:0;
}

a.footnote {
    font-size: 9pt;
    top: -0.1em;
}
div.footnotes {
    border-top: 1px solid #aaa;
    margin-left: 2em;
    margin-top: 3em;
    margin-right: 2em;
}
div.footnote {
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    font-size: 9pt;
}

.soft {
    color: #777;
}

h1 {
    margin: 0.1em 0;
    font-size: 2.6em;
    margin-bottom: 0em;
}

h2 {
    border-bottom: 1px solid #ddd;
    margin-top: 1.0em;
    text-align: left;
    margin-bottom: 2px;
    font-size: 1.6em;
}

h3 {
    margin-top: 2.0em;
    margin-bottom: 1px;
    text-align: left;
    font-size: 1.4em;
}

h4 {
    margin-top: 1em;
    margin-bottom: 0em;
    margin-left: 0em;
    color: #777;
}

h1,
h2,
h3,
h4 {
    word-wrap: break-word;
}

/* https://css-tricks.com/hash-tag-links-padding/ */
.anchor::before {
    display: block;
    content: " ";
    margin-top: -3em;
    height: 3em;
    visibility: hidden;
    pointer-events: none;
}

a.method-name::before {
    display: inline-block;
    content: " ";
    margin-top: -5em;
    height: 5em;
    visibility: hidden;
    pointer-events: none;
}

dt {
    font-weight: bold;
}
dd {
    margin-top: 0.25em;
    margin-bottom: 1.25em;
}

code, pre {
    font-family: monospace;
    font-size: 9pt;
}

pre {
    border-left: 2px solid #e0e0e0;
    padding-left: 1em;
}
/* ... */

